--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </div>      
     </section>
     <footer class="footer">
-      <h4 class="footer-author">Я х Практикум</h4>
+      <h4 class="footer-author">София Булатникова х Практикум</h4>
     </footer>
   </body>
 </html>
